[package]
name = "dirrotate"
version = "0.1.0"
authors = ["Jonatan Midtgaard"]
edition = "2018"
description = "Cull unwanted files from directories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
clap = { version = "3.2.16", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
glob = "0.3.0"
walkdir = "2"
path-matchers = "1.0"
parse-size = { version = "1.0.0", features = ["std"] }

