[package]
name = "dirrotate"
version = "0.1.0"
authors = ["Jonatan Midtgaard"]
edition = "2018"
license = "MIT"
description = "Cull unwanted files from directories"
homepage = "https://sbtinstruments.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
# TODO: Revert to 3.2.16
clap = { version = "=3.1.18", features = ["derive"] }
# TODO: Revert to 1.0.1
clap-verbosity-flag = "=1.0.0" 
glob = "0.3.0"
walkdir = "2"
path-matchers = "1.0"
parse-size = { version = "1.0.0", features = ["std"] }
# dependencies of dependencies - needed to fix their version
indexmap = "=1.8.2"
clap_lex = "=0.2.0"

